@@ -1,6 +1,11 @@
 Chronological listing of changes. If a particular SVN revision has no entry, that
 check-in did not involve any code or feature changes.
 
+2009-04-08 (r38)
+
+* Moved factory methods from OCMConstraint to OCMArg
+
+
 2009-03-13 (r37)
 
 * Added pass by ref argument setters
